cmake_minimum_required(VERSION 3.0.2)
project(handeye_calib)

set(CMAKE_BUILD_TYPE "Release")
set(CMAKE_CXX_FLAGS "-std=c++14")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall -g")

## Compile as C++11, supported in ROS Kinetic and newer
# add_compile_options(-std=c++11)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  roscpp
  std_msgs
  sensor_msgs
  geometry_msgs
  cv_bridge
  pcl_conversions
  pcl_ros
  image_transport
  message_generation
  eigen_conversions
)

find_package(OpenCV REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(PCL REQUIRED) 
find_package(Ceres 1.14.0 EXACT REQUIRED)

add_service_files(FILES
  HandEyeCalibration.srv
)

generate_messages(DEPENDENCIES geometry_msgs)


catkin_package(
  INCLUDE_DIRS include
  CATKIN_DEPENDS roscpp std_msgs sensor_msgs geometry_msgs message_runtime
)


include_directories(
  include
  ${catkin_INCLUDE_DIRS}
  ${EIGEN3_INCLUDE_DIRS}
  ${CERES_INCLUDE_DIRS}
)

add_executable(calibrator 
  src/calibrate.cpp 
  src/pose_local_parameterization.cpp
)
target_link_libraries(calibrator
  ${catkin_LIBRARIES} 
  ${CERES_LIBRARIES}
)

